--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -18,6 +18,53 @@
    "id": "c26efbf9",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# 2. Read the YAML config file\n",
+    "with open('config/secrets.yml', 'r') as f:\n",
+    "    config = yaml.safe_load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28cb079d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Get the path from the YAML file\n",
+    "shapefile_path = config['shapefile']['path']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0ad864e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Open the shapefile using GeoPandas\n",
+    "gdf = gpd.read_file(shapefile_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ab40a99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Work with the GeoDataFrame\n",
+    "print(\"Shapefile opened successfully!\")\n",
+    "print(f\"Number of features: {len(gdf)}\")\n",
+    "gdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a989b745",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -28,7 +75,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.3"
   }
  },
