--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -2,67 +2,128 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c90a928a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import yaml\n",
     "import geopandas as gpd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c26efbf9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Read the YAML config file\n",
-    "with open('config/secrets.yml', 'r') as f:\n",
-    "    config = yaml.safe_load(f)"
+    "# Load configuration from YAML\n",
+    "try:\n",
+    "    with open('config/secrets.yml', 'r') as f:\n",
+    "        config = yaml.safe_load(f)\n",
+    "    shapefile_path = config['shapefile']['path']\n",
+    "except Exception as e:\n",
+    "    print(f\"Error reading config file: {e}\")\n",
+    "    sys.exit(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "28cb079d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Get the path from the YAML file\n",
-    "shapefile_path = config['shapefile']['path']"
+    "# Read the shapefile\n",
+    "try:\n",
+    "    gdf = gpd.read_file(shapefile_path)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error reading shapefile: {e}\")\n",
+    "    sys.exit(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a0ad864e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. Open the shapefile using GeoPandas\n",
-    "gdf = gpd.read_file(shapefile_path)"
+    "# Check if column exists\n",
+    "if 'LINKED_AGG' not in gdf.columns:\n",
+    "    print(\"Error: 'LINKED_AGG' column not found in the shapefile\")\n",
+    "    sys.exit(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3ab40a99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "⚠️  We have a problem of duplicated OSCs! ⚠️\n",
+      "Number of duplicated entries: 27\n",
+      "Duplicate values:\n",
+      "LINKED_AGG\n",
+      "64    9\n",
+      "63    8\n",
+      "21    5\n",
+      "50    3\n",
+      "54    2\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5. Work with the GeoDataFrame\n",
-    "print(\"Shapefile opened successfully!\")\n",
-    "print(f\"Number of features: {len(gdf)}\")\n",
-    "gdf.head()"
+    "# Check for duplicates\n",
+    "duplicates = gdf['LINKED_AGG'].duplicated(keep=False)\n",
+    "\n",
+    "if duplicates.any():\n",
+    "    print(\"\\n⚠️  We have a problem of duplicated OSCs! ⚠️\")\n",
+    "    print(f\"Number of duplicated entries: {duplicates.sum()}\")\n",
+    "    print(\"Duplicate values:\")\n",
+    "    print(gdf[duplicates]['LINKED_AGG'].value_counts())\n",
+    "else:\n",
+    "    print(\"\\n✅ Everything is okay - no duplicated OSCs found!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a989b745",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LINKED_AGG\n",
+       "64    9\n",
+       "63    8\n",
+       "21    5\n",
+       "50    3\n",
+       "54    2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5feb72c2",
    "metadata": {},
    "outputs": [],
    "source": []
