--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -70,20 +70,17 @@
     "\n",
     "if duplicates.any():\n",
     "    print(\"\\n⚠️  We have a problem of duplicated OSCs! ⚠️\")\n",
-    "    print(f\"Number of duplicated entries: {duplicates.sum()}\")\n",
-    "    print(\"Duplicate values:\")\n",
-    "    print(gdf[duplicates]['LINKED_AGG'].value_counts())\n",
+    "    print(f\"Total duplicated entries: {duplicates.sum()}\")\n",
+    "    \n",
+    "    # Create a DataFrame with value counts\n",
+    "    duplicates_df = gdf[duplicates]['LINKED_AGG'].value_counts().reset_index()\n",
+    "    duplicates_df.columns = ['OSC Value', 'Duplicate Count']\n",
+    "    \n",
+    "    print(\"\\nDuplicate occurrences:\")\n",
+    "    print(duplicates_df.to_string(index=False))\n",
     "else:\n",
     "    print(\"\\n✅ Everything is okay - no duplicated OSCs found!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a989b745",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
