--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -8,9 +8,8 @@
    "outputs": [],
    "source": [
     "import yaml\n",
-    "import geopandas as gpd\n",
-    "from pathlib import Path\n",
-    "import sys"
+    "import sys\n",
+    "from automation import check_osc_duplicates"
    ]
   },
   {
@@ -24,7 +23,7 @@
     "try:\n",
     "    with open('config/secrets.yml', 'r') as f:\n",
     "        config = yaml.safe_load(f)\n",
-    "    shapefile_path = config['shapefile']['path']\n",
+    "    shp_path = config['shapefile']['path']\n",
     "except Exception as e:\n",
     "    print(f\"Error reading config file: {e}\")\n",
     "    sys.exit(1)"
@@ -37,58 +36,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read the shapefile\n",
-    "try:\n",
-    "    gdf = gpd.read_file(shapefile_path)\n",
-    "except Exception as e:\n",
-    "    print(f\"Error reading shapefile: {e}\")\n",
-    "    sys.exit(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0ad864e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check if column exists\n",
-    "if 'LINKED_AGG' not in gdf.columns:\n",
-    "    print(\"Error: 'LINKED_AGG' column not found in the shapefile\")\n",
-    "    sys.exit(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ab40a99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check for duplicates\n",
-    "duplicates = gdf['LINKED_AGG'].duplicated(keep=False)\n",
+    "# Call the function with direct path\n",
+    "result = check_osc_duplicates(shp_path)\n",
     "\n",
-    "if duplicates.any():\n",
-    "    print(\"\\n⚠️  We have a problem of duplicated OSCs! ⚠️\")\n",
-    "    print(f\"Total duplicated entries: {duplicates.sum()}\")\n",
-    "    \n",
-    "    # Create a DataFrame with value counts\n",
-    "    duplicates_df = gdf[duplicates]['LINKED_AGG'].value_counts().reset_index()\n",
-    "    duplicates_df.columns = ['OSC Value', 'Duplicate Count']\n",
-    "    \n",
-    "    print(\"\\nDuplicate occurrences:\")\n",
-    "    print(duplicates_df.to_string(index=False))\n",
+    "# Or call with hardcoded path\n",
+    "# result = check_osc_duplicates(r\"C:\\path\\to\\your\\file.shp\")\n",
+    "\n",
+    "# Handle results\n",
+    "if result is None:\n",
+    "    print(\"Check failed due to errors\")\n",
+    "elif result:\n",
+    "    print(\"Action required: Duplicates found!\")\n",
     "else:\n",
-    "    print(\"\\n✅ Everything is okay - no duplicated OSCs found!\")"
+    "    print(\"Data quality check passed\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5feb72c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
