--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -23,7 +23,7 @@
     "try:\n",
     "    with open('config/secrets.yml', 'r') as f:\n",
     "        config = yaml.safe_load(f)\n",
-    "    shp_path = config['shapefile']['path']\n",
+    "    workspace = config['ouputfolder']['path']\n",
     "except Exception as e:\n",
     "    print(f\"Error reading config file: {e}\")\n",
     "    sys.exit(1)"
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Call the function with direct path\n",
-    "result = check_osc_duplicates(shp_path)\n",
+    "result = check_osc_duplicates(workspace)\n",
     "\n",
     "# Or call with hardcoded path\n",
     "\n",
