--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -3,13 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c90a928a",
+   "id": "a44cb532",
    "metadata": {},
    "outputs": [],
    "source": [
     "import yaml\n",
     "import sys\n",
-    "from automation import check_osc_duplicates"
+    "from automation import check_osc_duplicates, check_invalid_cable_refs"
    ]
   },
   {
@@ -23,7 +23,7 @@
     "try:\n",
     "    with open('config/secrets.yml', 'r') as f:\n",
     "        config = yaml.safe_load(f)\n",
-    "    workspace = config['ouputfolder']['path']\n",
+    "    shp_path = config['shapefile']['path']\n",
     "except Exception as e:\n",
     "    print(f\"Error reading config file: {e}\")\n",
     "    sys.exit(1)"
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Call the function with direct path\n",
-    "result = check_osc_duplicates(workspace)\n",
+    "result = check_osc_duplicates(shp_path)\n",
     "\n",
     "# Or call with hardcoded path\n",
     "\n",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e43bb12c",
+   "id": "3ae6efed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -61,7 +61,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
