--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -57,8 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result =  check_invalid_cable_refs(workspace)\n",
-    "    "
+    "check_invalid_cable_refs(workspace)"
    ]
   }
  ],
