--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a44cb532",
+   "execution_count": null,
+   "id": "20860337",
    "metadata": {},
    "outputs": [],
    "source": [
     "import yaml\n",
     "import sys\n",
-    "from automation import check_osc_duplicates"
+    "from automation import check_osc_duplicates, check_invalid_cable_refs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c26efbf9",
+   "id": "53ddf6ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "try:\n",
     "    with open('config/secrets.yml', 'r') as f:\n",
     "        config = yaml.safe_load(f)\n",
-    "    shp_path = config['shapefile']['path']\n",
+    "        ouput = config['ouputfolder']['path']\n",
     "except Exception as e:\n",
     "    print(f\"Error reading config file: {e}\")\n",
     "    sys.exit(1)"
@@ -32,12 +32,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28cb079d",
+   "id": "38524342",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Call the function with direct path\n",
-    "result = check_osc_duplicates(shp_path)\n",
+    "result = check_osc_duplicates(ouput)\n",
     "\n",
     "# Or call with hardcoded path\n",
     "\n",
@@ -47,22 +47,26 @@
     "elif result:\n",
     "    print(\"Action required: Duplicates found!\")\n",
     "else:\n",
-    "    print(\"Data quality check passed\")"
+    "    print(\"Data quality check passed\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ae6efed",
+   "id": "8ed10a27",
    "metadata": {},
    "outputs": [],
-<<<<<<< HEAD
-   "source": []
-=======
    "source": [
-    "check_invalid_cable_refs(workspace)"
+    "check_invalid_cable_refs(ouput)"
    ]
->>>>>>> 6c58f3d0f1fd743ec3956fa5ddb4033dd838a5c0
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25e8fb76",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
