--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a44cb532",
    "metadata": {},
    "outputs": [],
    "source": [
     "import yaml\n",
     "import sys\n",
-    "from automation import check_osc_duplicates"
+    "from automation import check_osc_duplicates, check_invalid_cable_refs, report_splice_counts_by_closure"
    ]
   },
   {
@@ -23,7 +23,7 @@
     "try:\n",
     "    with open('config/secrets.yml', 'r') as f:\n",
     "        config = yaml.safe_load(f)\n",
-    "    shp_path = config['shapefile']['path']\n",
+    "    Workspace = config['outputfolder']['path']\n",
     "except Exception as e:\n",
     "    print(f\"Error reading config file: {e}\")\n",
     "    sys.exit(1)"
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Call the function with direct path\n",
-    "result = check_osc_duplicates(shp_path)\n",
+    "result = check_osc_duplicates(Workspace)\n",
     "\n",
     "# Or call with hardcoded path\n",
     "\n",
@@ -56,13 +56,27 @@
    "id": "3ae6efed",
    "metadata": {},
    "outputs": [],
-<<<<<<< HEAD
-   "source": []
-=======
    "source": [
-    "check_invalid_cable_refs(workspace)"
+    "check_invalid_cable_refs(Workspace)"
    ]
->>>>>>> 6c58f3d0f1fd743ec3956fa5ddb4033dd838a5c0
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb88156f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report_splice_counts_by_closure(Workspace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd15474a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
