--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -3,13 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20860337",
+   "id": "a44cb532",
    "metadata": {},
    "outputs": [],
    "source": [
     "import yaml\n",
     "import sys\n",
-    "from automation import check_osc_duplicates, check_invalid_cable_refs"
+    "from automation import check_osc_duplicates, check_invalid_cable_refs, report_splice_counts_by_closure"
    ]
   },
   {
@@ -23,7 +23,7 @@
     "try:\n",
     "    with open('config/secrets.yml', 'r') as f:\n",
     "        config = yaml.safe_load(f)\n",
-    "        ouput = config['ouputfolder']['path']\n",
+    "    Workspace = config['ouputfolder']['path']\n",
     "except Exception as e:\n",
     "    print(f\"Error reading config file: {e}\")\n",
     "    sys.exit(1)"
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Call the function with direct path\n",
-    "result = check_osc_duplicates(ouput)\n",
+    "result = check_osc_duplicates(Workspace)\n",
     "\n",
     "# Or call with hardcoded path\n",
     "\n",
@@ -57,13 +57,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_invalid_cable_refs(ouput)"
+    "check_invalid_cable_refs(Workspace)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25e8fb76",
+   "id": "fb88156f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report_splice_counts_by_closure(Workspace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd15474a",
    "metadata": {},
    "outputs": [],
    "source": []
