--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -23,7 +23,7 @@
     "try:\n",
     "    with open('config/secrets.yml', 'r') as f:\n",
     "        config = yaml.safe_load(f)\n",
-    "    Workspace = config['ouputfolder']['path']\n",
+    "    Workspace = config['outputfolder']['path']\n",
     "except Exception as e:\n",
     "    print(f\"Error reading config file: {e}\")\n",
     "    sys.exit(1)"
