--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import yaml\n",
     "import sys\n",
-    "from automation import check_osc_duplicates, check_invalid_cable_refs, report_splice_counts_by_closure"
+    "from automation import check_osc_duplicates, check_invalid_cable_refs, report_splice_counts_by_closure, process_shapefiles"
    ]
   },
   {
@@ -69,6 +69,24 @@
    "source": [
     "report_splice_counts_by_closure(Workspace)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8eff5e31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_shapefiles(Workspace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ee3384a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
