--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import yaml\n",
     "import sys\n",
-    "from automation import check_osc_duplicates, check_invalid_cable_refs, report_splice_counts_by_closure, process_shapefiles"
+    "from automation import check_osc_duplicates, check_invalid_cable_refs, report_splice_counts_by_closure, process_shapefiles, check_gistool_id"
    ]
   },
   {
@@ -77,16 +77,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_shapefiles(Workspace)"
+    "result = process_shapefiles(Workspace)\n",
+    "\n",
+    "if result is None:\n",
+    "    print(\"Critical error occurred\")\n",
+    "elif result:\n",
+    "    print(\"Closures need attention\")\n",
+    "else:\n",
+    "    print(\"All checks passed successfully\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ee3384a",
+   "id": "d580ca7e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = check_gistool_id(Workspace)\n",
+    "\n",
+    "if result is None:\n",
+    "    print(\"Critical error occurred\")\n",
+    "elif result:\n",
+    "    print(\"Issues found in segments\")\n",
+    "else:\n",
+    "    print(\"All segment checks passed\")"
+   ]
   }
  ],
  "metadata": {
