--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "20860337",
+   "execution_count": null,
+   "id": "a44cb532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "try:\n",
     "    with open('config/secrets.yml', 'r') as f:\n",
     "        config = yaml.safe_load(f)\n",
-    "        ouput = config['ouputfolder']['path']\n",
+    "    Workspace = config['outputfolder']['path']\n",
     "except Exception as e:\n",
     "    print(f\"Error reading config file: {e}\")\n",
     "    sys.exit(1)"
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Call the function with direct path\n",
-    "result = check_osc_duplicates(ouput)\n",
+    "result = check_osc_duplicates(Workspace)\n",
     "\n",
     "# Or call with hardcoded path\n",
     "\n",
@@ -57,35 +57,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_invalid_cable_refs(ouput)"
+    "check_invalid_cable_refs(Workspace)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "25e8fb76",
+   "execution_count": null,
+   "id": "fb88156f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ouput' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m report_splice_counts_by_closure(\u001b[43mouput\u001b[49m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'ouput' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "report_splice_counts_by_closure(ouput)"
+    "report_splice_counts_by_closure(Workspace)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
