--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -9,7 +9,11 @@
    "source": [
     "import yaml\n",
     "import sys\n",
-    "from automation import check_osc_duplicates, check_invalid_cable_refs, report_splice_counts_by_closure, check_cluster_overlaps, check_granularity_fields"
+    "from automation import (\n",
+    "    check_osc_duplicates, check_invalid_cable_refs,\n",
+    "    report_splice_counts_by_closure, process_shapefiles,\n",
+    "    check_gistool_id, check_cluster_overlaps, check_granularity_fields\n",
+    ")"
    ]
   },
   {
@@ -53,16 +57,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39aef084",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "check_osc_duplicates(Workspace)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8ed10a27",
    "metadata": {},
    "outputs": [],
@@ -96,22 +90,12 @@
    "id": "823a81f9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "check_granularity_fields(Workspace)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a132624f",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
