--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -12,7 +12,7 @@
     "from automation import (\n",
     "    check_osc_duplicates, check_invalid_cable_refs,\n",
     "    report_splice_counts_by_closure, process_shapefiles,\n",
-    "    check_gistool_id, check_cluster_overlaps, check_granularity_fields\n",
+    "    check_gistool_id, check_cluster_overlaps, check_granularity_fields, validate_non_virtual_closures\n",
     ")"
    ]
   },
@@ -88,6 +88,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "823a81f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validate_non_virtual_closures(Workspace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50dd2cb1",
    "metadata": {},
    "outputs": [],
    "source": []
