--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -101,6 +101,16 @@
    "id": "50dd2cb1",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "validate_feeder_primdistribution_locations(Workspace, tolerance=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38c86a18",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
