--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -111,7 +111,9 @@
    "id": "38c86a18",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "validate_cable_diameters(Workspace)"
+   ]
   }
  ],
  "metadata": {
