--- a/checking_automation.ipynb
+++ b/checking_automation.ipynb
@@ -13,7 +13,8 @@
     "    check_osc_duplicates, check_invalid_cable_refs,\n",
     "    report_splice_counts_by_closure, process_shapefiles,\n",
     "    check_gistool_id, check_cluster_overlaps, check_granularity_fields, \n",
-    "    validate_non_virtual_closures, validate_feeder_primdistribution_locations\n",
+    "    validate_non_virtual_closures, validate_feeder_primdistribution_locations,\n",
+    "    validate_cable_diameters\n",
     ")"
    ]
   },
